2016-07-25  Jiong Wang  <jiong.wang@arm.com>

	* config/aarch64/aarch64.c (aarch64_add_constant): Optimize instruction
	sequences.

2016-07-25  Jiong Wang  <jiong.wang@arm.com>

	* config/aarch64/aarch64.c (aarch64_add_constant): New parameter "mode".
	Use aarch64_internal_mov_immediate instead of aarch64_build_constant.
	(aarch64_output_mi_thunk): Pass Pmode when calling aarch64_add_constant.
	(aarch64_build_constant): Delete.

2016-07-25  Alexander Monakov  <amonakov@ispras.ru>

	Revert
	2016-07-20  Alexander Monakov  <amonakov@ispras.ru>

	* config/nvptx/nvptx.c (nvptx_option_override): Do not set
	flag_toplevel_reorder.

2016-07-25  Richard Biener  <rguenther@suse.de>

	* cgraph.c (cgraph_node::verify_node): Compare against builtin
	by using DECL_BUILT_IN_CLASS and DECL_FUNCTION_CODE.
	* tree-chkp.c (chkp_gimple_call_builtin_p): Likewise.
	* tree-streamer.h (streamer_handle_as_builtin_p): Remove.
	(streamer_get_builtin_tree): Likewise.
	(streamer_write_builtin): Likewise.
	* lto-streamer.h (LTO_builtin_decl): Remove.
	* lto-streamer-in.c (lto_read_tree_1): Remove assert.
	(lto_input_scc): Remove LTO_builtin_decl handling.
	(lto_input_tree_1): Liekwise.
	* lto-streamer-out.c (lto_output_tree_1): Remove special
	handling of builtins.
	(DFS::DFS): Likewise.
	* tree-streamer-in.c (streamer_get_builtin_tree): Remove.
	* tree-streamer-out.c (pack_ts_function_decl_value_fields): Remove
	assert.
	(streamer_write_builtin): Remove.

2016-07-25  Martin Liska  <mliska@suse.cz>

	* lto-cgraph.c (input_symtab): Don't call get_working_sets
	if flag_auto_profile is set to true.

2016-07-25  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/71868
	* cfgloopanal.c (expected_loop_iterations_unbounded): When we
	have a function with multiple latches, count them all.

2016-07-25  Martin Liska  <mliska@suse.cz>

	* tree-ssa-loop-niter.c (loop_only_exit_p): Release body array.

2016-07-25  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/71987